# qsing-box

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/: build-guide.md  subscription-design.md
resources/styles/: style.qss
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/config/: config_manager.cpp  config_manager.h
src/proxy/: proxy_manager.cpp
src/subscription/: CMakeLists.txt  add_subscription_dialog.cpp  add_subscription_dialog.h  add_subscription_dialog.ui  subscription.cpp  subscription.h  subscription_dialog.cpp  subscription_dialog.h  subscription_dialog.ui  subscription_downloader.cpp  subscription_downloader.h  subscription_manager.cpp  subscription_manager.h
src/utils/: CMakeLists.txt  file_logger.cpp  file_logger.h
